--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vanillajs_form_validations_and_submission",
-    "version": "1.0.0",
-    "description": "Building a validation form with HTML5 and JS validation loop and CSS provided by Bulma",
+    "version": "1.0.2",
+    "description": "This project demonstrate a form submission page that validates name and phone accordinly a defined pattern and sends the submission to a backend DB via JSON API.",
     "main": "styles/mystyles.scss",
     "dependencies": {},
     "devDependencies": {
